# neuroanalysis

./: .gitignore  .gitmodules  LICENSE.txt  README.md  model_test.py  pyproject.toml  setup.py
.github/workflows/: deploy.yml  python-package-conda.yml  test.yml
examples/: exp_fitting.ipynb  release_model.py  test_event_detection.py  test_psp_train_fit.py  test_pulse_analysis.ipynb
neuroanalysis/: analyzers.py  event_detection.py  miesnwb.py  spike_detection.py  stimuli.py  synaptic_release.py  test_pulse.py  test_pulse_stack.py  units.py
neuroanalysis/analyzers/: analyzer.py  baseline.py  stim_pulse.py
neuroanalysis/data/: __init__.py  cell.py  dataset.py  electrode.py  experiment.py  loaders.py  pair.py
neuroanalysis/data/libraries/: opto.py  template.py
neuroanalysis/fitting/: __init__.py  exp.py  fit_scale_offset.py  fitmodel.py  psp.py
neuroanalysis/neuronsim/: components.py  mechanisms.py  model_cell.py  sim.py
neuroanalysis/tests/: bath-ugly.h5  test_analyzers.py  test_dataset_loading.py  test_event_detection.py  test_exp_fit.py  test_psp_fitting.py  test_release_model.py  test_spike_detection.py  test_stimuli.py  test_test_pulse.py
neuroanalysis/ui/: baseline.py  event_detection.py  filter.py  fitting.py  plot_grid.py  psp_fitting.py  qt.py  spike_detection.py  sta_analyzer.py  triggered_average.py  user_test.py
neuroanalysis/util/: device_config.py  h5py_wrapper.py  jit.py  lru_cache.py  mies_nwb_parsing.py  optional_import.py
tools/: import_psp_fitting.py  import_spike_detection.py  mies_nwb_viewer.py  model_test.py  sta.py  vc_spike_test.py
(+7 files in other folders)
