[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["neuroanalysis"]

[tool.setuptools.dynamic]
version = {attr = "neuroanalysis.__version__"}

[tool.pytest.ini_options]
testpaths = ["neuroanalysis/tests"]

[project]
name = "neuroanalysis"
authors = [
  {name="Luke Campagnola", email="lukec@alleninstitute.org"},
]
description = "Functions and modular user interface tools for analysis of patch clamp experiment data."
readme = "README.md"
license = {file="LICENSE.txt"}
keywords=["neuroscience", "analysis", "neurodata", "without", "borders", "nwb"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]
dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "neuron",
]

[project.optional-dependencies]
"ACQ4" = ["acq4"]
"jit" = ["numba"]
"MIES" = []
"test" = ["pytest"]
"ui" = ["pyqtgraph"]

[project.urls]
homepage = "https://github.com/AllenInstitute/neuroanalysis"
issues = "https://github.com/AllenInstitute/neuroanalysis/issues"
